2004-03-25  Kevin Turner  <kevin@freegeek.org>

	* selftest/test_modem.py, test_syslog: 1.3 use trial for unit tests.

	* selftest/cursesnodisk: 1.1 test __name__ == "main"

	* meminfo.py: 1.1 add shebang.

	* selftest/test_syslog.py, test_modem.py, __init__.py: 
	* badblocks.py, __init__.py: Added module-level docstrings.

	* README: 1.4 mention documents HACKING and testing-purpose, and
	add cursesdisk.py to list of scripts.

	* Makefile (epydoc): 1.3 Added rule to build documentation for
	python modules.
	(test): 1.4 add 'test' target.

	* HACKING: 1.2 Added a list of all files, with some hint of what each
	one is.

2003-05-09  Kevin Turner  <kevin@freegeek.org>

	* selftest/fauxblocks: stub for badblocks; doesn't actually
	read/write to disk.

	* selftest/cursesnodisk: run cursesdisk without disks.

2003-02-07  Vagrant <vagrant@freegeek.org>

	* added easydialog menu when no testscript defined.

2003-02-04  Kevin Turner  <kevin@freegeek.org>

	* disk.py: 1.26 Comments about devfs compatibility

	* badblocks.py, cursesdisk.py: bits of documentation, made lots of
	module-level things private.

2003-01-25  Vagrant <vagrant@freegeek.org>

	* added support for devfs and lessdisks to common.sh
	* incorporating the video card tester stuff

2003-01-10  Kevin Turner  <kevin@freegeek.org>

	* cursesdisk.py: 1.22 'import os' was missing.

2003-01-08  Kevin Turner  <kevin@freegeek.org>

	* disk.py (noWipe): 1.20 uncomment
	(prepDrivesForScan): 1.20
	(findBlockDevicesToScan): 1.20 Mark unknown partition types to be
	overwritten, rather than ???'d at.
	(mke2fs): 1.20 preliminary mke2fs wrapper

2002-11-09  Kevin Turner  <kevin@freegeek.org>

	* modem.py (main): 1.11 catch EIO on open_modem.  Fixes bug where
	tracebacks would cause useful information to scroll off the
	screen.

2002-04-27  Kevin Turner  <acapnotic@users.sourceforge.net>

	* cursesdisk.py: 1.20 Set MEMINFO and VERBOSE flags from the
	environment.

	* cursesdisk.py (BadblocksWidget.finished): 1.20